--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y python3-sphinx
+        pip install recommonmark
+        pip install sphinx_rtd_theme
 
     - name: Build Sphinx docs
       run: |
